--- a/code_JPEG.ipynb
+++ b/code_JPEG.ipynb
@@ -794,7 +794,7 @@
     "\n",
     "Table=[]\n",
     "def Affichage_resultats(n,T):\n",
-    "    title=[\"Black&White\",\"Arbre\",\"Montagne\",\"Mère\",\"Gravure\",\"Libellulle\",\"Kayak\",\"Lunch\",\"Eiffel\",\"Maison\",\"Poule\",\"Poème\",\"Fleur\"]\n",
+    "    title=[\"Black&White\",\"Arbre\",\"Montagne\",\"Mère\",\"Libellulle\",\"Kayak\",\"Lunch\",\"Eiffel\",\"Maison\",\"Poule\",\"Fleur\"]\n",
     "    path=\"image_test/\"+str(n)+\".jpg\"\n",
     "    image_test=Image_couleur(path).division_en_3().luminance #extraire la luminance de l'image test\n",
     "    Test=Image(title[n],image_test)\n",
